// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error view 1`] = `
<div
  role="main"
>
  <div>
    <div>
      <div>
        <Pagination
          count={0}
          hideResults={false}
          page={0}
          pageSize={10}
        />
      </div>
    </div>
    <div>
      <div>
        Something's gone wrong
      </div>
      <div>
        We can't load the page you have requested. Please check your network connection and retry to continue
      </div>
      <Button
        title="Retry"
      />
    </div>
  </div>
</div>
`;

exports[`2. an error view with header 1`] = `
<div
  role="main"
>
  <div>
    Some Header
  </div>
  <div>
    <div>
      <div>
        <Pagination
          count={0}
          hideResults={false}
          page={0}
          pageSize={10}
        />
      </div>
    </div>
    <div>
      <div>
        Something's gone wrong
      </div>
      <div>
        We can't load the page you have requested. Please check your network connection and retry to continue
      </div>
      <Button
        title="Retry"
      />
    </div>
  </div>
</div>
`;

exports[`3. an empty list 1`] = `
<div
  role="main"
>
  <div>
    <div>
      Empty state
    </div>
  </div>
</div>
`;

exports[`4. loading state 1`] = `
<div
  role="main"
>
  <div>
    <div>
      <div>
        <div>
          <Pagination
            count={0}
            hideResults={false}
            page={0}
            pageSize={3}
          />
        </div>
      </div>
    </div>
    <div
      accessibility-label="empty.0"
      id="empty.0"
    >
      <div>
        <div>
          <Card
            imageRatio={1}
            isLoading={true}
            showImage={true}
          />
        </div>
      </div>
    </div>
    <div
      accessibility-label="empty.1"
      id="empty.1"
    >
      <div>
        <div>
          <div />
        </div>
        <div>
          <Card
            imageRatio={1}
            isLoading={true}
            showImage={true}
          />
        </div>
      </div>
    </div>
    <div
      accessibility-label="empty.2"
      id="empty.2"
    >
      <div>
        <div>
          <div />
        </div>
        <div>
          <Card
            imageRatio={1}
            isLoading={true}
            showImage={true}
          />
        </div>
      </div>
    </div>
    <div>
      <div>
        <Pagination
          count={0}
          hideResults={true}
          page={0}
          pageSize={3}
        />
      </div>
    </div>
  </div>
</div>
`;
